--- a/bravo.html
+++ b/bravo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les variables</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -44,7 +44,7 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
@@ -53,5 +53,7 @@
         </div>
     </div>
 </body>
+<audio src="assets/youpi.wav" autoplay preload </audio>
+<audio src="assets/applause.wav"autoplay preload </audio>
 
 </html>
