--- a/bravo3.html
+++ b/bravo3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les conditions</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
     <div class="main animated fadeIn">
         <div class="left">
-            <header class="title bravo animated slideInLeft">Bravo !</header>
+            <header class="title bravo animated slideInLeft">Super !</header>
             <div class="tuC">
                 Tu sais ce que c’est qu’une
                 <span class="orange">condition ! </span>
@@ -44,14 +44,15 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
-            <img class="cocody-bravo animated fadeInUpBig" src="./assets/cocody1.gif" />
+            <img class="cocody-bravo animated fadeInUpBig" src="./assets/cocody6.gif" />
             <a class="suite" href="tableau-def.html">On continue ?</a>
         </div>
     </div>
 </body>
-
+<audio src="assets/youpi.wav" autoplay preload </audio>
+<audio src="assets/applause.wav"autoplay preload </audio>
 </html>
