--- a/condition-3.html
+++ b/condition-3.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Cocody</title>
+<title>Cocody : les conditions</title>
 <script src="scripts/jquery-3.3.1.min.js"></script>
 <script src="scripts/coucou.js"></script>
 <!-- fonts -->
@@ -27,7 +27,7 @@
     <li><a href="fonction-def.html">Les fonctions</a></li>
     <li><a href="condition-def.html">Les conditions</a></li>
     <li><a href="tableau-def.html"> Les tableaux</a></li>
-    <li><a href="">L'objet</a></li>
+    <li><a href="objet-def.html">L’objet</a></li>
 	  </ul>
   </nav>
    <img src="assets/separation.png"/>
