--- a/condition-def.html
+++ b/condition-def.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les conditions</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -26,10 +26,10 @@
                     <br> dans certains cas, ce sont les conditions
                     <br> que tu vas utiliser.
                     <br>
-                    <br> Par exemple, tu vas vouloir dire "salut"
-                    <br> à tes meilleurs amis, alors que tu vas
-                    <br> dire "bonjour" aux gens qui te sont
-                    <br> moins proches. </div>
+                    <br> Par exemple, tu vas vouloir dire <br> « salut »
+                    à tes meilleurs amis, alors que tu vas
+                     dire « bonjour » aux gens qui te sont
+                    moins proches. </div>
             </div>
         </div>
         <div class="right">
@@ -51,15 +51,16 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
+            <img class="cocody-def2 animated wobble" src="./assets/cocody2.gif" />
             <a class="suite" href="condition.html">
                 <br>
                 <br> Allons découvrir ça ensemble !</a>
         </div>
     </div>
 </body>
-
+<audio src="assets/harpe1.wav"autoplay preload </audio>
 </html>
