--- a/condition.html
+++ b/condition.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les conditions</title>
     <script src="scripts/jquery-3.3.1.min.js"></script>
     <script src="scripts/condition.js"></script>
 
@@ -33,6 +33,7 @@
                 </span> montre une condition :
                 <span class="purple">« Si...»</span>
             </div>
+            <img class="cocody-exercice3 animated bounceInLeft" src="./assets/cocody5.gif" />
         </div>
         <div class="right">
             <nav class="nav">
@@ -53,7 +54,7 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
@@ -91,4 +92,5 @@
             <a class="suite" href="condition-2.html">Suite</a>
         </div>
     </div>
+    <audio src="assets/frein.wav" autoplay preload></audio>
 </body>
