--- a/fonction.html
+++ b/fonction.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les fonctions</title>
     <script src="scripts/jquery-3.3.1.min.js"></script>
     <script src="scripts/fonction.js"></script>
 
@@ -29,7 +29,6 @@
             <div class="instruction code">
                 <span class="purple">
                     <br>
-                    <br>
                     <br> function
                 </span>
                 <span class="blue2">additionner</span>
@@ -38,8 +37,10 @@
                 </span>
                 <span class="blue3 indent-1">return</span>
                 <span class="blue"> a + b ;
-                    <br> } </span>
+                    <br> } </span><br>
+                    
             </div>
+     <img class="cocody-exercice5 animated zoomInDown" src="./assets/cocody5.gif" />
         </div>
         <div class="right">
             <nav class="nav">
@@ -60,7 +61,7 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
@@ -82,5 +83,5 @@
         </div>
     </div>
 </body>
-
+<audio src="assets/plop.wav" autoplay preload></audio>
 </html>
