--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ inverser sens
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : Accueil</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -26,10 +26,9 @@ inverser sens
         <div class="left">
             <header class="title index">Cocody</header>
             <div class="description">
-                <p>Apprends à coder en t'amusant avec Cocody !</p>
-                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour que tu deviennes un super héros de la
-                    programmation !</p>
-                <p>A la fin, la programmation n'aura plus aucun secret pour toi...</p>
+                <p>Apprends à coder en t’amusant avec Cocody !</p>
+                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour que tu deviennes un super héros de la programmation !</p>
+                <p>A la fin, la programmation n’aura plus aucun secret pour toi...</p>
                 <p>On va commencer par le commencement : les variables !</p>
             </div>
         </div>
@@ -52,13 +51,16 @@ inverser sens
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
-            <a class="suite" href="variables-def.html">C'est parti !</a>
+                <img class="cocody-index animated rotateInDownRight" src="./assets/cocody3.gif" />
+            <a class="suite" href="variables-def.html">C’est parti !</a>
         </div>
     </div>
+
 </body>
+<audio src="assets/windchime.wav"autoplay preload </audio>
 
 </html>
