--- a/tableau-def.html
+++ b/tableau-def.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les tableaux</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -22,7 +22,7 @@
         <div class="left">
             <header class="title">Les tableaux</header>
             <div class="description">
-                Un tableau en programmation, ça n'a rien à voir avec le tableau sur lequel le maître écrit !
+                Un tableau en programmation, ça n’a rien à voir avec le tableau sur lequel le maître écrit !
                 <br>
                 <br>En fait, un tableau, ça te permet de faire des groupes avec ce que tu veux.
                 <br>
@@ -48,15 +48,16 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
+             <img class="cocody-def5 animated zoomOut" src="./assets/cocody7.gif" />
             <a class="suite" href="tableau.html">
                 <br>
                 <br> Découvrons les tableaux !</a>
         </div>
     </div>
 </body>
-
+<audio src="assets/harpe1.wav"autoplay preload </audio>
 </html>
