--- a/tableau.html
+++ b/tableau.html
@@ -1,96 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
-    <script src="scripts/jquery-3.3.1.min.js"></script>
-    <script src="scripts/tab.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Cocody : les tableaux</title>
+<script src="scripts/jquery-3.3.1.min.js"></script>
+<script src="scripts/tab.js"></script>
 
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-    <!-- styles -->
-    <!-- styles -->
-    <link rel="stylesheet" href="styles/reboot.css">
-    <link rel="stylesheet" href="styles/styles2.css">
-    <link rel="stylesheet" href="styles/animate.css">
+<!-- fonts -->
+<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+<!-- styles -->
+<!-- styles -->
+<link rel="stylesheet" href="styles/reboot.css">
+<link rel="stylesheet" href="styles/styles2.css">
+<link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-    <div class="main bounceIn animated">
-        <div class="left">
-            <header class="title tight">Les tableaux</header>
-            <div class="instruction">
-                <span class="red">Ecris le nom de tes amis dans les cases
-                    <br> du tableau.</span>
-                <br>
-                <br> Le prénom de chaque ami représente
-                <br> une valeur de ta variable.
-                <br> Chacun porte un index, un chiffre
-                <br> partant de
-                <span class="red"> 0</span>.</div>
-        </div>
-        <div class="right">
-            <nav class="nav">
-                <ul id="menu_horizontal">
-                    <li>
-                        <a href="index.html">Accueil</a>
-                    </li>
-                    <li>
-                        <a href="variables-def.html">Les variables</a>
-                    </li>
-                    <li>
-                        <a href="fonction-def.html">Les fonctions</a>
-                    </li>
-                    <li>
-                        <a href="condition-def.html">Les conditions</a>
-                    </li>
-                    <li>
-                        <a href="tableau-def.html"> Les tableaux</a>
-                    </li>
-                    <li>
-                        <a href="">L'objet</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="data">
-                <table>
-                    <tr>
-                        <td>
-                            <input id="tab1" type="text" size="10" style="height:35px;" />
-                        </td>
-                        <td>
-                            <input id="tab2" type="text" size="10" style="height:35px;" />
-                        </td>
-                        <td>
-                            <input id="tab3" type="text" size="10" style="height:35px;" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input id="tab4" type="text" size="10" style="height:35px;" />
-                        </td>
-                        <td>
-                            <input id="tab5" type="text" size="10" style="height:35px;" />
-                        </td>
-                        <td>
-                            <input id="tab6" type="text" size="10" style="height:35px;" />
-                        </td>
-                    </tr>
-                    <br>
-                </table>
-                <div class="amis">
-                    <span class="purple">var</span>
-                    <span class="gray">amis </span>
-                    <span class="purple">=</span>
-                    <span id="tableauResultat" class="blue"></span>
-                    <!-- [‘ ’,‘ ’,‘ ’,‘ ’ ]-->
-                </div>
-            </div>
-            <a class="suite" href="condition-2.html">Suite</a>
-        </div>
+<div class="main bounceIn animated">
+  <div class="left">
+    <header class="title tight">Les tableaux</header>
+    <div class="instruction"> <span class="red">Ecris le nom de tes amis dans les cases <br>
+      du tableau.</span> <br>
+      <br>
+      Le prénom de chaque ami représente <br>
+      une valeur de ta variable. <br>
+      Chacun porte un index, un chiffre <br>
+      partant de <span class="red"> 0</span>.</div>
+  </div>
+  <div class="right">
+    <nav class="nav">
+      <ul id="menu_horizontal">
+        <li> <a href="index.html">Accueil</a> </li>
+        <li> <a href="variables-def.html">Les variables</a> </li>
+        <li> <a href="fonction-def.html">Les fonctions</a> </li>
+        <li> <a href="condition-def.html">Les conditions</a> </li>
+        <li> <a href="tableau-def.html"> Les tableaux</a> </li>
+        <li> <a href="objet-def.html">L’objet</a> </li>
+      </ul>
+    </nav>
+    <div class="data">
+      <table>
+        <tr>
+          <td><input id="tab1" type="text" size="10" style="height:35px;" /></td>
+          <td><input id="tab2" type="text" size="10" style="height:35px;" /></td>
+          <td><input id="tab3" type="text" size="10" style="height:35px;" /></td>
+        </tr>
+        <tr>
+          <td><input id="tab4" type="text" size="10" style="height:35px;" /></td>
+          <td><input id="tab5" type="text" size="10" style="height:35px;" /></td>
+          <td><input id="tab6" type="text" size="10" style="height:35px;" /></td>
+        </tr>
+        <br>
+      </table>
+      <div class="amis"> <span class="purple">var</span> <span class="gray">amis </span> <span class="purple">=</span> <span id="tableauResultat" class="blue"></span> <img class="cocody-exercice5 animated fadeInUpBig" src="./assets/cocody5.gif" /> 
+        <!-- [‘ ’,‘ ’,‘ ’,‘ ’ ]--> 
+        
+      </div>
     </div>
+    <a class="suite" href="bravo4.html">Suite</a> </div>
+</div>
+<audio src="assets/plop.wav" autoplay preload></audio>
 </body>
