--- a/variables-def.html
+++ b/variables-def.html
@@ -1,5 +1,4 @@
 <!--
->nom de l’element qu’on étudie sur chaque page
 >sons-->
 
 <html lang="en">
@@ -8,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les variables</title>
 
     <script src="scripts/variables-def.js"></script>
 
@@ -27,8 +26,8 @@
         <div class="left">
             <header class="title">Les variables</header>
             <div class="description">
-                <p>La vie, c'est un ensemble de variables, et en fait le code, c'est pareil !</p>
-                <p>Tu vas avoir plein d'informations, et il faut ranger ces informations dans des cases.</p>
+                <p>La vie, c’est un ensemble de variables, et en fait le code, c’est pareil !</p>
+                <p>Tu vas avoir plein d’informations, et il faut ranger ces informations dans des cases.</p>
                 <p>Ces cases, ce sont les variables.</p>
             </div>
         </div>
@@ -51,13 +50,14 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
-            <a class="suite" href="variables.html">Allons découvrir les variables ensemble !</a>
+          <img class="cocody-def animated fadeInDownBig" src="./assets/cocody4.gif" />
+            <a class="suite" href="variables.html">Allons les découvrir ensemble !</a>
         </div>
     </div>
 </body>
-
+<audio src="assets/harpe1.wav"autoplay preload </audio>
 </html>
