--- a/condition-2.html
+++ b/condition-2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les conditions</title>
     <script src="scripts/jquery-3.3.1.min.js"></script>
     <script src="scripts/condition-2.js"></script>
 
@@ -53,7 +53,7 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
@@ -70,10 +70,12 @@
                         <br> }
                     </span>
                 </div>
-
                 <div id="salutations-info"></div>
+                <img class="cocody-exercice3 animated bounceInRight" src="./assets/cocody5.gif" />
             </div>
+            
             <a class="suite" href="bravo3.html">Suite</a>
         </div>
     </div>
+        <audio src="assets/frein.wav" autoplay preload></audio>
 </body>
