--- a/fonction-def.html
+++ b/fonction-def.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
+    <title>Cocody : les fonctions</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
@@ -64,15 +64,16 @@
                         <a href="tableau-def.html"> Les tableaux</a>
                     </li>
                     <li>
-                        <a href="">L'objet</a>
+                        <a href="objet-def.html">L’objet</a>
                     </li>
                 </ul>
             </nav>
             <a class="suite" href="fonction.html">
                 <br>
                 <br> On continue !</a>
+                <img class="cocody-def2 animated hinge" src="./assets/cocody3.gif" />
         </div>
     </div>
 </body>
-
+<audio src="assets/harpe1.wav"autoplay preload </audio>
 </html>
