--- a/variables.html
+++ b/variables.html
@@ -1,78 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody</title>
-    <script src="scripts/jquery-3.3.1.min.js"></script>
-    <script src="scripts/variables.js"></script>
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-    <!-- styles -->
-    <link rel="stylesheet" href="styles/reboot.css">
-    <link rel="stylesheet" href="styles/styles2.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Cocody : les variables</title>
+<script src="scripts/jquery-3.3.1.min.js"></script>
+<script src="scripts/variables.js"></script>
+<!-- fonts -->
+<link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+<!-- styles -->
+<link rel="stylesheet" href="styles/reboot.css">
+<link rel="stylesheet" href="styles/styles2.css">
 </head>
 
 <body>
-    <div class="main around">
-        <div class="left">
-            <header class="title">Les variables</header>
-            <div class="instruction">Pour commencer,
-                <span class="red">crée une
-                    <br> variable avec ton prénom dans
-                    <br> la case verte. </span>
-                <br>
-                <br>
-                <span class="purple">var</span> est le mot clé pour
-                <br> déclarer une variable.
-                <br>
-                <br>
-                <span class="purple">= </span> permet de lui donner une
-                <br> valeur.
-                <br>
-                <br>
-                <span class="green2">Ton prénom </span> est la valeur de
-                <br> la variable.</div>
-        </div>
-        <div class="right">
-            <nav class="nav">
-                <ul id="menu_horizontal">
-                    <li>
-                        <a href="index.html">Accueil</a>
-                    </li>
-                    <li>
-                        <a href="variables-def.html">Les variables</a>
-                    </li>
-                    <li>
-                        <a href="fonction-def.html">Les fonctions</a>
-                    </li>
-                    <li>
-                        <a href="condition-def.html">Les conditions</a>
-                    </li>
-                    <li>
-                        <a href="tableau-def.html"> Les tableaux</a>
-                    </li>
-                    <li>
-                        <a href="">L'objet</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="data">
-                <div class="variable-schema">
-                    <div class="variable-declaration">
-                        <span class="purple">var</span>
-                        <span class="gray">tonPrénom</span>
-                        <span class="purple"> =</span>
-                        <span class="blue">‘
-                            <input type="text" id="prenom-input" size="10" style="height:35px;" /> ’ </div>
-                </div>
-            </div>
-            <a class="suite" href="bravo.html">Suite</a>
-        </div>
+<div class="main around">
+  <div class="left">
+    <header class="title">Les variables</header>
+    <div class="instruction">Pour commencer, <span class="red">crée une <br>
+      variable avec ton prénom dans <br>
+      la case verte. </span> <br>
+      <br>
+      <span class="purple">var</span> est le mot clé pour <br>
+      déclarer une variable. <br>
+      <br>
+      <span class="purple">= </span> permet de lui donner une <br>
+      valeur. <br>
+      <br>
+      <span class="green2">Ton prénom </span> est la valeur de <br>
+      la variable.</div>
+  </div>
+  <div class="right">
+    <nav class="nav">
+      <ul id="menu_horizontal">
+        <li> <a href="index.html">Accueil</a> </li>
+        <li> <a href="variables-def.html">Les variables</a> </li>
+        <li> <a href="fonction-def.html">Les fonctions</a> </li>
+        <li> <a href="condition-def.html">Les conditions</a> </li>
+        <li> <a href="tableau-def.html"> Les tableaux</a> </li>
+        <li> <a href="objet-def.html">L’objet</a> </li>
+      </ul>
+    </nav>
+    <div class="data">
+      <div class="variable-schema">
+        <div class="variable-declaration"> <span class="purple">var</span> <span class="gray">tonPrénom</span> <span class="purple"> =</span> <span class="blue">‘
+          <input type="text" id="prenom-input" size="10" style="height:35px;" />
+          ’ </div>
+      </div>
     </div>
+    <img class="cocody-coucou animated fadeInUpBig" src="./assets/cocody5.gif" /> 
+    <a class="suite" href="bravo.html">Suite</a> </div>
+</div>
 </body>
-
 </html>
