--- a/bravo5.html
+++ b/bravo5.html
@@ -1,15 +1,15 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody : Accueil</title>
+    <title>Cocody : les variables</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-
     <!-- styles -->
     <link rel="stylesheet" href="styles/reboot.css">
     <link rel="stylesheet" href="styles/styles2.css">
@@ -17,18 +17,16 @@
 </head>
 
 <body>
-    <div class="main bounceIn animated">
+    <div class="main animated fadeIn">
         <div class="left">
-            <header class="title index">Cocody</header>
-            <div class="description">
-                <p>Apprends à coder en t’amusant avec Cocody !</p>
-                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour que tu deviennes un super héros de la programmation !</p>
-                <p>A la fin, la programmation n’aura plus aucun secret pour toi...</p>
-                <p>On va commencer par le commencement : les variables !</p>
+            <header class="title bravo animated slideInLeft">Bravo !</header>
+            <div class="tuC">
+                Tu sais ce que c’est qu’un
+                <span class="orange">objet ! </span>
             </div>
         </div>
         <div class="right">
-            <nav class="nav">
+            <nav class="nav animated slideInRight">
                 <ul id="menu_horizontal">
                     <li>
                         <a href="index.html">Accueil</a>
@@ -50,12 +48,12 @@
                     </li>
                 </ul>
             </nav>
-                <img class="cocody-index animated rotateInDownRight" src="./assets/cocody3.gif" />
-            <a class="suite" href="variables-def.html">C’est parti !</a>
+            <img class="cocody-bravo animated fadeInUpBig" src="./assets/cocody1.gif" />
+            <a class="suite" href="fin.html">Suite</a>
         </div>
     </div>
-
 </body>
-<audio src="assets/windchime.wav"autoplay preload </audio>
+<audio src="assets/youpi.wav" autoplay preload </audio>
+<audio src="assets/applause.wav" autoplay preload </audio>
 
 </html>
