--- a/tableau.html
+++ b/tableau.html
@@ -42,19 +42,20 @@
       </ul>
     </nav>
     <div class="data">
-      <table>
+      <table class="tableau">
         <tr>
-          <td><input id="tab1" type="text" size="10" style="height:35px;" /></td>
-          <td><input id="tab2" type="text" size="10" style="height:35px;" /></td>
-          <td><input id="tab3" type="text" size="10" style="height:35px;" /></td>
+          <td><div>0</div><input id="tab1" type="text" size="10" style="height:35px;" /></td>
+          <td><div>1</div><input id="tab2" type="text" size="10" style="height:35px;" /></td>
+          <td><div>2</div><input id="tab3" type="text" size="10" style="height:35px;" /></td>
         </tr>
         <tr>
-          <td><input id="tab4" type="text" size="10" style="height:35px;" /></td>
-          <td><input id="tab5" type="text" size="10" style="height:35px;" /></td>
-          <td><input id="tab6" type="text" size="10" style="height:35px;" /></td>
+          <td><div>3</div><input id="tab4" type="text" size="10" style="height:35px;" /></td>
+          <td><div>4</div><input id="tab5" type="text" size="10" style="height:35px;" /></td>
+          <td><div>5</div><input id="tab6" type="text" size="10" style="height:35px;" /></td>
         </tr>
         <br>
       </table>
+      
       <div class="amis"> <span class="purple">var</span> <span class="gray">amis </span> <span class="purple">=</span> <span id="tableauResultat" class="blue"></span> <img class="cocody-exercice5 animated fadeInUpBig" src="./assets/cocody5.gif" /> 
         <!-- [‘ ’,‘ ’,‘ ’,‘ ’ ]--> 
         
