--- a/fin.html
+++ b/fin.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <div class="data">
-      <div class="auRevoir"> Au revoir !
+      <div class="auRevoir"> A très bientôt !
         <img class="cocody-fin animated zoomOutDown" src="./assets/cocody8.gif"/>
       </div>
     </div>
