--- a/objet2.html
+++ b/objet2.html
@@ -39,8 +39,8 @@
     <div class="resulat-objet">
       Je sais donc que tu t'appelles <span id="prenom-toi"></span> et que tu as
     <span id="age-toi"></span> ans.  <br> <br>
-     Ton ami s'appelle <span id="prenom-tonAmi"></span> </dd>
-  et il a <span id="age-tonAmi"></span> ans. <br> <br>
+     Ton ami/amie s'appelle <span id="prenom-tonAmi"></span> </dd>
+  et il/elle a <span id="age-tonAmi"></span> ans. <br> <br>
           L'espèce de ton animal préféré est
             <span id="espece-animal"></span> de couleur <span id="couleur-animal"></span>.
          </div>
