--- a/tableau.html
+++ b/tableau.html
@@ -25,7 +25,7 @@
     <div class="instruction"> <span class="red">Ecris le nom de tes amis dans les cases <br>
       du tableau.</span> <br>
       <br>
-      Le prénom de chaque ami représente <br>
+      Le prénom de chaque ami/amie représente <br>
       une valeur de ta variable. <br>
       Chacun porte un index, un chiffre <br>
       partant de <span class="red"> 0</span>.</div>
