encore des choses

--- a/condition-2.html
+++ b/condition-2.html
@@ -25,13 +25,12 @@
             <header class="title tight">Les conditions</header>
             <div class="instruction">Dans la dernière case,
                 <span class="red">écris le
-                    <br> salut que tu veux pour tes deux
-                    <br> amis.
+                    <br> salut que tu veux pour pour les <br> autres personnes.
                 </span>
                 <br>
                 <br>
-                <span class="purple">«else» </span>signifie
-                <span class="purple">«Sinon...»</span>
+                <span class="purple">« else » </span>signifie
+                <span class="purple">« Sinon...»</span>
             </div>
         </div>
         <div class="right">
