--- a/condition.html
+++ b/condition.html
@@ -24,7 +24,7 @@
         <div class="left">
             <header class="title tight">Les conditions</header>
             <div class="instruction">
-                <span class="red">Ecris deux prénoms de tes amis</span>
+                <span class="red">Ecris deux prénoms de tes amis/amies</span>
                 <br> dans les deux cases vertes.
                 <br>
                 <span class="purple">
