--- a/fin.html
+++ b/fin.html
@@ -20,7 +20,7 @@
   <div class="left">
     <header class="title">C’est fini !</header>
     <div class="instruction"> Eh voilà, on dirait que tu as terminé cette petite aventure dans le monde <br>de la programmation. <br> <br>
-    Tu fais maintenant partie des superhéros du code ! Reviens quand tu veux !</div>
+    Tu fais maintenant partie des <br> superhéros du code ! <br><br> Reviens quand tu veux !</div>
   </div>
   <div class="right">
     <nav class="nav">
