--- a/objet-def.html
+++ b/objet-def.html
@@ -22,7 +22,7 @@
         <div class="left">
             <header class="title">L’objet</header>
             <div class="description">
-               Un objet en programmation c’est comme un objet du monde réel mais ce n’est pas forcément restreint au matériel. <br>
+               Un objet en programmation c’est comme un objet du monde réel mais <br> ce n’est pas forcément restreint au matériel. <br>
                <br>
                En programmation, un chien est un <br>
                objet. Une idée est également un objet, tandis qu’on ne dirait pas cela dans le monde réel.
