--- a/objet.html
+++ b/objet.html
@@ -19,7 +19,7 @@
 <div class="main around">
 <div class="left">
   <header class="title">L’objet</header>
-  <div class="instruction"><span class="red">Donne les caractéristiques des objets suivants : </span> </div>
+  <div class="instruction"><span class="red">Donne les caractéristiques des <br>« objets » suivants : </span> </div>
 </div>
 <div class="right">
   <nav class="nav">
