--- a/tableau.html
+++ b/tableau.html
@@ -22,11 +22,11 @@
 <div class="main bounceIn animated">
   <div class="left">
     <header class="title tight">Les tableaux</header>
-    <div class="instruction"> <span class="red">Ecris le nom de tes amis dans les cases <br>
+    <div class="instruction"> <span class="red">Ecris le nom de tes amis/amies dans <br> les cases 
       du tableau.</span> <br>
       <br>
-      Le prénom de chaque ami/amie représente <br>
-      une valeur de ta variable. <br>
+      Le prénom de chaque ami/amie représente 
+      une valeur de ta variable. <br><br>
       Chacun porte un index, un chiffre <br>
       partant de <span class="red"> 0</span>.</div>
   </div>
