--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <header class="title index">Cocody</header>
             <div class="description">
                 <p>Apprends à coder en t’amusant avec Cocody !</p>
-                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour que tu deviennes un/une super héros/héroïne de la programmation !</p>
-                <p>A la fin, la programmation n’aura plus aucun secret pour toi...</p>
+                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour <br> que tu deviennes un/une super héros/héroïne de la programmation !</p>
+                <p>A la fin, la programmation n’aura <br> plus aucun secret pour toi...</p>
                 <p>On va commencer par le commencement : les variables !</p>
             </div>
         </div>
