--- a/condition-2.html
+++ b/condition-2.html
@@ -25,7 +25,7 @@
             <header class="title tight">Les conditions</header>
             <div class="instruction">Dans la dernière case,
                 <span class="red">écris le
-                    <br> salut que tu veux pour pour les <br> autres personnes.
+                    <br> mot que tu veux utiliser pour saluer  <br> les autres personnes.
                 </span>
                 <br>
                 <br>
