--- a/fin.html
+++ b/fin.html
@@ -19,7 +19,7 @@
 <div class="main around">
   <div class="left">
     <header class="title">C’est fini !</header>
-    <div class="instruction"> Eh voilà, on dirait que tu as terminé cette petite aventure dans le monde <br>de la programmation. <br> <br>
+    <div class="instruction"> Et voilà, on dirait que tu as terminé cette petite aventure dans le monde <br>de la programmation. <br> <br>
     Tu fais maintenant partie des <br> superhéros du code ! <br><br> Reviens quand tu veux !</div>
   </div>
   <div class="right">
