--- a/fonction.html
+++ b/fonction.html
@@ -26,20 +26,22 @@
             <div class="instruction">
                 <span class="red">Choisis les valeurs de a et b !</span>
             </div>
-            <div class="instruction code">
-                <span class="purple">
+             <br> <br><div class="code instruction">
+                    <span class="purple">function </span>
+                    <span class="blue2">additionner</span>
+                    <span class="blue">(</span>
+                    <span class="orange">a</span>
+                    <span class="blue">,</span>
+                    <span class="orange">b</span>
+                    <span class="blue">) {</span>
                     <br>
-                    <br> function
-                </span>
-                <span class="blue2">additionner</span>
-                <span class="blue">(a , b) {
-                    <br>
-                </span>
-                <span class="blue3 indent-1">return</span>
-                <span class="blue"> a + b ;
-                    <br> } </span><br>
-                    
-            </div>
+                    <span class="blue3 indent-1">return </span>
+                    <span class="orange">a</span>
+                    <span class="blue"> + </span>
+                    <span class="orange"> b</span>
+                    <span class="blue">;
+                        <br> } </span>
+                </div>
      <img class="cocody-exercice5 animated zoomInDown" src="./assets/cocody5.gif" />
         </div>
         <div class="right">
