--- a/objet-def.html
+++ b/objet-def.html
@@ -22,10 +22,12 @@
         <div class="left">
             <header class="title">L’objet</header>
             <div class="description">
-               Un objet en programmation c’est comme un objet du monde réel mais <br> ce n’est pas forcément restreint au matériel. <br>
+               Un objet en programmation c’est un moyen de regrouper plein d'informations sur une seule chose. <br>
                <br>
-               En programmation, un chien est un <br>
-               objet. Une idée est également un objet, tandis qu’on ne dirait pas cela dans le monde réel.
+               Par exemple, en programmation, un animal est un
+               objet qui possède plusieurs propriétés : plusieurs pattes, <br>un nom et une couleur.<br><br>
+               Une personne est aussi un objet en programmation, avec un nom, un âge et d'autres propriétés...
+              
 
             </div>
         </div>
