--- a/objet.html
+++ b/objet.html
@@ -19,7 +19,9 @@
 <div class="main around">
 <div class="left">
   <header class="title">L’objet</header>
-  <div class="instruction"><span class="red">Donne les caractéristiques des <br>« objets » suivants : </span> </div>
+  <div class="instruction"><span class="red">Donne les caractéristiques des <br>« objets » suivants : <br> <br> <br> </span> </div>
+  <div> Nous avons par exemple des objets <br> de type « personne » et un objet de type 
+    « animal ».</div>
 </div>
 <div class="right">
   <nav class="nav">
