--- a/objet2.html
+++ b/objet2.html
@@ -20,9 +20,7 @@
 <div class="left">
   <header class="title">L’objet</header>
   <div class="instruction"> Grâce à tes informations, nous avons <br>pu créer trois objets. Chacun possède ses propres caractéristiques. <br>
-    <br>
-    Nous avons par exemple des objets de type « personne » et un objet de type <br>
-    « animal ». </div>
+    </div>
 </div>
 <div class="right">
   <nav class="nav">
