--- a/tableau-def.html
+++ b/tableau-def.html
@@ -22,7 +22,7 @@
         <div class="left">
             <header class="title">Les tableaux</header>
             <div class="description">
-                Un tableau en programmation, ça n’a rien à voir avec le tableau sur lequel le maître écrit !
+                Un tableau en programmation, ça n’a rien à voir avec le tableau sur lequel <br> le maître ou la maîtresse écrit !
                 <br>
                 <br>En fait, un tableau, ça te permet de faire des groupes avec ce que tu veux.
                 <br>
