--- a/tableau.html
+++ b/tableau.html
@@ -44,14 +44,14 @@
     <div class="data">
       <table class="tableau">
         <tr>
-          <td><div>0</div><input id="tab1" type="text" size="10" style="height:35px;" /></td>
-          <td><div>1</div><input id="tab2" type="text" size="10" style="height:35px;" /></td>
-          <td><div>2</div><input id="tab3" type="text" size="10" style="height:35px;" /></td>
+          <td><div class="red">0</div><input id="tab1" type="text" size="10" style="height:35px;" /></td>
+          <td><div class="red">1</div><input id="tab2" type="text" size="10" style="height:35px;" /></td>
+          <td><div class="red">2</div><input id="tab3" type="text" size="10" style="height:35px;" /></td>
         </tr>
         <tr>
-          <td><div>3</div><input id="tab4" type="text" size="10" style="height:35px;" /></td>
-          <td><div>4</div><input id="tab5" type="text" size="10" style="height:35px;" /></td>
-          <td><div>5</div><input id="tab6" type="text" size="10" style="height:35px;" /></td>
+          <td><div class="red">3</div><input id="tab4" type="text" size="10" style="height:35px;" /></td>
+          <td><div class="red">4</div><input id="tab5" type="text" size="10" style="height:35px;" /></td>
+          <td><div class="red">5</div><input id="tab6" type="text" size="10" style="height:35px;" /></td>
         </tr>
         <br>
       </table>
