--- a/variables-def.html
+++ b/variables-def.html
@@ -26,7 +26,7 @@
         <div class="left">
             <header class="title">Les variables</header>
             <div class="description">
-                <p>La vie, c’est un ensemble de variables, et en fait le code, c’est pareil !</p>
+                <p>La vie, c’est un ensemble de variables, et en fait, le code c’est pareil !</p>
                 <p>Tu vas avoir plein d’informations, et il faut ranger ces informations dans des cases.</p>
                 <p>Ces cases, ce sont les variables.</p>
             </div>
