--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cocody : Accueil</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Cocody : Accueil</title>
 
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 
-    <!-- styles -->
-    <link rel="stylesheet" href="styles/reboot.css">
-    <link rel="stylesheet" href="styles/styles2.css">
-    <link rel="stylesheet" href="styles/animate.css">
+  <!-- styles -->
+  <link rel="stylesheet" href="styles/reboot.css">
+  <link rel="stylesheet" href="styles/styles2.css">
+  <link rel="stylesheet" href="styles/animate.css">
 </head>
 
 <body>
-    <div class="main bounceIn animated">
-        <div class="left">
-            <header class="title index">Cocody</header>
-            <div class="description">
-                <p>Apprends à coder en t’amusant avec Cocody !</p>
-                <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour <br> que tu deviennes un/une super héros/héroïne de la programmation !</p>
-                <p>A la fin, la programmation n’aura <br> plus aucun secret pour toi...</p>
-                <p>On va commencer par le commencement : les variables !</p>
-            </div>
-        </div>
-        <div class="right">
-            <nav class="nav">
-                <ul id="menu_horizontal">
-                    <li>
-                        <a href="index.html">Accueil</a>
-                    </li>
-                    <li>
-                        <a href="variables-def.html">Les variables</a>
-                    </li>
-                    <li>
-                        <a href="fonction-def.html">Les fonctions</a>
-                    </li>
-                    <li>
-                        <a href="condition-def.html">Les conditions</a>
-                    </li>
-                    <li>
-                        <a href="tableau-def.html"> Les tableaux</a>
-                    </li>
-                    <li>
-                        <a href="objet-def.html">L’objet</a>
-                    </li>
-                </ul>
-            </nav>
-                <img class="cocody-index animated rotateInDownRight" src="./assets/cocody3.gif" />
-            <a class="suite" href="variables-def.html">C’est parti !</a>
-        </div>
+  <div class="main bounceIn animated">
+    <div class="left">
+      <header class="title index">Cocody</header>
+      <div class="description">
+        <p>Apprends à coder en t’amusant avec Cocody !</p>
+        <p>On va parcourir un petit chemin ensemble, et je vais tout faire pour
+          <br> que tu deviennes un/une super héros/héroïne de la programmation !</p>
+        <p>A la fin, la programmation n’aura
+          <br> plus aucun secret pour toi...</p>
+        <p>On va commencer par le commencement : les variables !</p>
+      </div>
     </div>
+    <div class="right">
+      <nav class="nav">
+        <ul id="menu_horizontal">
+          <li>
+            <a href="index.html">Accueil</a>
+          </li>
+          <li>
+            <a href="variables-def.html">Les variables</a>
+          </li>
+          <li>
+            <a href="fonction-def.html">Les fonctions</a>
+          </li>
+          <li>
+            <a href="condition-def.html">Les conditions</a>
+          </li>
+          <li>
+            <a href="tableau-def.html"> Les tableaux</a>
+          </li>
+          <li>
+            <a href="objet-def.html">L’objet</a>
+          </li>
+        </ul>
+      </nav>
+      <img class="cocody-index animated rotateInDownRight" src="./assets/cocody3.gif" />
+      <a class="suite" href="variables-def.html">C’est parti !</a>
+    </div>
+  </div>
 
 </body>
-<audio src="assets/windchime.wav"autoplay preload </audio>
+<audio src="assets/windchime.wav" autoplay preload </audio>
 
 </html>
